<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:background="@color/Azure"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentTop="true">
    <TimePicker
        android:id="@+id/tp_timer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foregroundGravity="center_vertical"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_setClock"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:background="@color/LightGreen"
        android:textSize="50sp"
        android:textColor="@color/White"
        android:text="@string/tip_add"
        android:layout_marginBottom="2dp"/>

    <Button
        android:id="@+id/btn_setMusic"
        android:layout_width="fill_parent"
        android:layout_height="65dp"
        android:layout_above="@id/btn_setClock"
        android:background="@color/PaleTurquoise"
        android:text="@string/tip_musicName"
        android:textColor="@color/White"
        android:layout_marginBottom="1dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:layout_above="@id/btn_setMusic"
        android:gravity="center"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@color/LightCyan"
        android:id="@+id/linearLayout">
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun"
            android:id="@+id/cb_sun"
            />
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:id="@+id/cb_mon"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:id="@+id/cb_tue"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:id="@+id/cb_wed"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thur"
            android:id="@+id/cb_thur"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:id="@+id/cb_fri"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:id="@+id/cb_sat"/>
        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/all"
            android:id="@+id/cb_all"/>
    </LinearLayout>
</RelativeLayout>